[gd_scene load_steps=2 format=2]

[ext_resource path="res://System/Scripts/Scenes/Menus/OptionsMenu.gd" type="Script" id=1]

[node name="ConfirmationDialog" type="ConfirmationDialog"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -438.0
margin_top = -247.0
margin_right = 437.0
margin_bottom = 246.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Settings"
resizable = false
dialog_hide_on_ok = true
script = ExtResource( 1 )
_sections_unfolded = [ "Dialog", "Popup" ]

[node name="TabContainer" type="TabContainer" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -429.5
margin_top = -238.5
margin_right = 429.5
margin_bottom = 210.5
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 0
tabs_visible = true

[node name="Video" type="Control" parent="TabContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Video" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Video/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 831.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_constants" ]

[node name="LeftCol" type="VBoxContainer" parent="TabContainer/Video/VBoxContainer/HBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 123.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor" ]

[node name="MSAA" type="VBoxContainer" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 123.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MSAALabel" type="Label" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol/MSAA" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 123.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Antialiasing (MSAA)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MSAAOption" type="OptionButton" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol/MSAA" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 123.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Disabled"
flat = false
align = 0
selected = 0
items = [ "Disabled", null, false, 0, null, "MSAA 2X", null, false, 1, null, "MSAA 4X", null, false, 2, null, "MSAA X8", null, false, 3, null, "MSAA X16", null, false, 4, null ]

[node name="Resolution" type="VBoxContainer" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 123.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MSAALabel" type="Label" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol/Resolution" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 123.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Resolution"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResolutionOption" type="OptionButton" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol/Resolution" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 123.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Disabled"
flat = false
align = 0
selected = 0
items = [ "Disabled", null, false, 0, null, "MSAA 2X", null, false, 1, null, "MSAA 4X", null, false, 2, null, "MSAA X8", null, false, 3, null, "MSAA X16", null, false, 4, null ]

[node name="FXAA" type="VBoxContainer" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 123.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="FXAAOption" type="CheckBox" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol/FXAA" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 123.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "FXAA"
flat = false
align = 0

[node name="ShowFPS" type="VBoxContainer" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 123.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="ShowFPSOption" type="CheckBox" parent="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol/ShowFPS" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 123.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Show FPS"
flat = false
align = 0

[node name="RightCol" type="VBoxContainer" parent="TabContainer/Video/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 173.0
margin_right = 302.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Anchor", "Focus", "Hint", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="AnisotropicFiltering" type="VBoxContainer" parent="TabContainer/Video/VBoxContainer/HBoxContainer/RightCol" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 129.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="AnisotropicFilteringLabel" type="Label" parent="TabContainer/Video/VBoxContainer/HBoxContainer/RightCol/AnisotropicFiltering" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 129.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Anisotropic Filtering"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnisotropicFilteringOption" type="OptionButton" parent="TabContainer/Video/VBoxContainer/HBoxContainer/RightCol/AnisotropicFiltering" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 129.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Disabled"
flat = false
align = 0
selected = 0
items = [ "X1", null, false, 1, null, "X2", null, false, 2, null, "X4", null, false, 4, null, "X8", null, false, 8, null, "X16", null, false, 16, null ]

[node name="Controls" type="Control" parent="TabContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="InputMapTree" type="Tree" parent="TabContainer/Controls" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 1
allow_reselect = false
allow_rmb_select = false
hide_folding = false
hide_root = false
drop_mode_flags = 0
select_mode = 0

[node name="AcceptDialog" type="AcceptDialog" parent="TabContainer/Controls" index="1"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -29.0
margin_right = 236.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "Change keybind"
resizable = false
dialog_text = "Press the keys you want to change this binding to, or press ESC to abort
--"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog", "Popup" ]

[node name="Gameplay" type="Control" parent="TabContainer" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[connection signal="about_to_show" from="." to="." method="about_to_show"]

[connection signal="confirmed" from="." to="." method="confirmed"]

[connection signal="item_selected" from="TabContainer/Video/VBoxContainer/HBoxContainer/LeftCol/MSAA/MSAAOption" to="." method="change_msaa"]


